@@ -40,6 +40,7 @@
    * If you need this, you should render the table manually.
    *
    * @author Ivo Jansch <ivo@achievo.org>
+   * @author Edgar van Ispelen <edgar@ibuildings.nl>
    * @package atk
    * @subpackage utils
    *
@@ -55,12 +56,37 @@
     var $m_rowclass = array();
     var $m_colclass = array();
     var $m_defaultclass = "";
+    var $m_maxWidth = 0;
+    var $m_flags = 0;
+    var $m_style = '';
 
     /**
-     * Default constructor
+     * Constructs a new table renderer
+     *
+     * @param int $flags flags to set (allowed: TBL_HEADER, TBL_FOOTER,
+     * TBL_ALTERNATE and TBL_DATA)
+     * @param string $style style class to set for the table
+     * @param string $module module to register style with
      */
-    function atkTableRenderer()
+    function atkTableRenderer($flags = 0, $style='', $module='')
     {
+      $this->m_flags = $flags;
+      
+      if ($style !== '')
+      {
+        $this->setTableStyle($style, $module);
+      }
+    }
+    
+    /**
+     * Sets a flag on this object. Allowed: TBL_HEADER, TBL_FOOTER,
+     * TBL_ALTERNATE and TBL_DATA
+     *
+     * @param int $flag
+     */
+    function setFlag($flag)
+    {
+      $this->m_flags |= $flag;
     }
 
     /**
@@ -156,11 +182,16 @@
     }
 
     /**
-     * @access private
+     * Sets spanning on a specifc column. 
+     *
+     * @param int $row row number
+     * @param int $col row column
+     * @param int $span width
+     * @param string $type
      */
     function _setSpan($row,$col,$span,$type="col")
     {
-      if(is_array($this->m_span[$row][$col]))
+      if(array_key_exists($row, $this->m_span) && is_array($this->m_span[$row][$col]))
       {
         $this->m_span[$row][$col] = array_merge(array($type."span"=>$span),$this->m_span[$row][$col]);
       }
@@ -193,7 +224,36 @@
     {
       $this->_setSpan($row,$col,$span,"row");
     }
-
+    
+    /**
+     * Registers a style with the page.
+     *
+     * @param string $style styleclass name
+     * @param string $module module to look for stylesheets
+     */
+    function registerStyle($style,$module="")
+    {
+      $theme = &atkinstance("atk.ui.atktheme");
+      $page = &atkPage::getInstance();
+      $page->register_style($theme->stylePath($style.".css",$module));
+    }
+    
+    /**
+     * Gets the maximum number of columns in a row
+     *
+     * @param aray $data table data
+     * @return int max number of rows
+     */
+    function _getMaxCols($data)
+    {
+      $max = 0;
+      for($i=0, $_i=count($data); $i<$_i; $i++)
+      {
+        $max = max(count($data[$i]), $max);
+      }
+      return $max;
+    }
+    
     /**
      * Render a table.
      *
@@ -211,7 +271,8 @@
      *                       (compared to the other rows), the row is
      *                       automatically filled upon the right by a spacer
      *                       cell.
-     * @param int    $flags  One or more bitwise flags that influence the way
+     * @param int    $flags  (obsolete). Set flags in constructor or setFlag()
+     *                       One or more bitwise flags that influence the way
      *                       the table is rendered.
      *                       Valid flags:
      *                       - TBL_HEADER: the first row will be rendered as
@@ -221,151 +282,291 @@
      *                       - TBL_ALTERNATE: The rows of the table should
      *                                        alternate in color.
      *                       - TBL_DATA: Alias for TBL_HEADER|TBL_ALTERNATE.
-     * @param string $style  The style to render the table in (without .css
+     * @param string $style  (obsolete) Use the constructor parameter or setTableStyle()
+     *                       The style to render the table in (without .css
      *                       extension).
-     * @param string $module The module where is style is located.
+     * @param string $module (obsolete) Use the constructor parameter or setTableStyle()
+     *                       The module where is style is located.
      *
      * @return String The rendered table.
      */
     function render($data, $flags=0, $style="",$module="")
     {
-      if ($style!="")
+      $this->setFlag($flags);
+      if ($style !== "")
       {
-        $this->registerStyle($style,$module);
+        $this->setTableStyle($style, $module);
       }
-
-      // Analyze. If not all rows have the same number of columns, we should pad the end.
-      $max = $this->_getMaxCols($data);
-
-      // Render
-      $output = $this->_start($style);
-      $rowspans=array();
-      for ($row=0, $_row=count($data); $row<$_row; $row++)
+      $output = $this->_renderTable($data);
+      
+      return $output;
+    }
+    
+    /**
+     * Sets the table style class and registers it in the result page 
+     *
+     * @param string $class styleclass name
+     * @param string $module module to look for stylesheets
+     */
+    function setTableStyle($class, $module="")
+    {
+      $this->m_style = $class;
+      $this->registerStyle($class, $module);
+    }
+    
+    /**
+     * Gets the table style attribute component
+     *
+     * @return string
+     */
+    function _getTableStyleStr()
+    {
+      $class = '';
+      if (!empty($this->m_style))
       {
-        $output.='<tr class="row'.(hasFlag($flags, TBL_ALTERNATE)?(($row%2)==0?1:2):1).'">';
-
-        if (($row==0&&hasFlag($flags, TBL_HEADER)) || ($row==$_row-1&&hasFlag($flags, TBL_FOOTER)))
-        {
-          $pre = "<th"; $post = "</th>";
-        }
-        else
-        {
-          $pre = "<td"; $post = "</td>";
-        }
-        $total_col =0;
-        for ($col=0, $_col=count($data[$row]); $col<$_col; $col++)
-        {
-          if ($col == 0)
-          {
-            foreach ($rowspans as $key => $value)
-            {
-              $total_col += $value['colspan'];
-            }
-          }
-
-          $total_col++;
-          $align = $this->_alignmentStr($this->getAlignment($row, $col));
-          $span = $this->getSpan($row, $col);
-          if($span["rowspan"]!="")
-          {
-            $rowspans[] = $span;
-          }
-          if($span["colspan"]!="")
-          {
-            $total_col+=($span["colspan"]-1);
-          }
-          $colspan = $this->_spanStr($span);
-          $class = $this->_classStr($this->getClass($row, $col));
-
-          /* If the data contains an array, check for a value and id field. */
-          $value = "";
-          $id = "";
-          if(is_array($data[$row][$col]))
-          {
-            //Use the value field, if available
-            if(isset($data[$row][$col]['value']))
-              $value = $data[$row][$col]['value'];
-
-            //use the id field, if available
-            if(isset($data[$row][$col]['id']))
-              $id = 'id="'.$data[$row][$col]['id'].'"';
-          }
-          else
-            $value = $data[$row][$col];
-
-          $output.=$pre." ".$align." ".$id." ".$class." ".$colspan.">". $value . $post;
-        }
-
-        foreach ($rowspans as $key => $value)
-        {
-          $rowspans[$key]['rowspan']--;
-          if ($rowspans[$key]['rowspan'] == 0)
-            unset($rowspans[$key]);
-        }
-
-        // Check if we must pad
-        $align = $this->_alignmentStr($this->getAlignment($row, $col));
-        $class = $this->_classStr($this->getClass($row, $col));
-
-
-        if ($total_col==$max-1)
-        {
-          // Must add only one
-          $output.=$pre." ".$align." ".$class.">&nbsp;".$post;
-        }
-        else if ($total_col<$max-1)
-        {
-          // Must add more
-          $output.=$pre." ".$align.' '.$class.' colspan="'.($max-$total_col).'">&nbsp;'.$post;
-        }
-
-
-        $output.="</tr>\n";
+        $class = "class=\"{$this->m_style}\"";
       }
+      
+      return $class;
+    }
+    
+    /**
+     * Renders the table. 
+     *
+     * @param array $data 
+     * @return html of the rendered table
+     */
+    function _renderTable($data)
+    {     
+      $this->m_maxWidth = $this->_getMaxCols($data);
+      $class = $this->_getTableStyleStr();
+      
+      $output = "\n<table {$class}>";
+      
+      // should render a header?
+      if (hasFlag($this->m_flags, TBL_HEADER))
+      {
+        $header = $data[0];
+        $rowOffset = 1;
+        $output .= $this->_renderHeader($header, 0);
+      }
+      
+      // should render a footer
+      if (hasFlag($this->m_flags, TBL_FOOTER))
+      {
+        $footer_row = count($data) - 1;
+        $footer = array_pop($data);
+        
+        $output .= $this->_renderBody($data, $rowOffset);
+        $output .= $this->_renderFooter($footer, $footer_row);
+      }
+      else
+      {
+        $output .= $this->_renderBody($data);
+      }
+      
+      $output .= "</table>\n";
+      
+      $this->m_maxWidth = 0; // reset
+      
+      return $output;
+    }
+    
+    /**
+     * Renders the value inside one cell.
+     * Supports the cell having id/value.
+     * This method only extracts the value.
+     *
+     * @param array|string $cell
+     * @return unknown
+     */
+    function _renderValue($cell)
+    {
+      $value = "";
+      if(is_array($cell))
+      {
+        // Use the value field, if available
+        if(isset($cell['value']))
+          $value = $cell['value'];
+      }
+      else
+      {
+        $value = (string)$cell;
+        if(empty($value))
+        {
+          $value = '&nbsp;';
+        }
+      }
+        
+      return $value;
+    }
+    
+    /**
+     * Renders one cell in the table.
+     *
+     * @param array|string $data value of the cell
+     * @param int $row row number of current cell
+     * @param int $col column number of current cell
+     * @param string $type type of tag to use. mostly 'td'
+     * @return string rendered cell
+     */
+    function _renderCell($data, $row, $col, $type)
+    {
+      $span     = $this->getSpan($row, $col);
+      $spanstr  = $this->_spanStr($span);
+      $alignstr = $this->_alignmentStr($this->getAlignment($row, $col));
+      $idstr    = $this->_getIdStr($data);
+      $class    = $this->_classStr($this->getClass($row, $col));
+      
+      $output  = "\n<{$type} {$idstr} {$class} {$spanstr} {$alignstr}>";
+      $output .= $this->_renderValue($data);
+      $output .= "</{$type}>";
+      return $output;
+    }
+    
+    /**
+     * Renders one header row.
+     *
+     * @param array $data row data
+     * @param int $row rownumber of the header, mostly 0
+     * @return string rendered header row
+     */
+    function _renderHeader($data, $row)
+    {
+      $output = '<thead>';
+      $output .= $this->_renderRow($data, $row, 'th');
+      $output .= '</thead>';
+      return $output;
+    }
+    /**
+     * Renders one footer row.
+     *
+     * @param array $data row data
+     * @param int $row rownumber of the footer
+     * @return string rendered footer row
+     */
+    function _renderFooter($data, $row)
+    {
+      $output = '<tfoot>';
+      $output .= $this->_renderRow($data, $row, 'th');
+      $output .= '</tfoot>';
+      return $output;
+    }
+    
+    /**
+     * Gets the styleclass for a rownumber
+     * Supports alternating rowclasses if TBL_ALTERNATE is set
+     * 
+     * @param string|int $row row number or rowclassname
+     * @return string html class string like 'class=row1'
+     */
+    function _getRowClassStr($row)
+    {
+      if (is_string($row))
+      {
+        return 'class="'.$row.'"';
+      }
+      else if (hasFlag($this->m_flags, TBL_ALTERNATE) && ($row % 2) !== 0)
+      {
+        return 'class="row2"';
+      }
+      else
+      {
+       return 'class="row1"';
+      }
+    }
 
-      $output.= $this->_end($style);
+    /**
+     * Renders one row in the table.
+     *
+     * @param array $data rowdata array
+     * @param int $row rownumber
+     * @param string $columntype tagname to use to render columns inside this row
+     * @return string html of the row
+     */
+    function _renderRow($data, $row, $columntype='td')
+    {      
+      $class = $this->_getRowClassStr($row);
+      
+      $output = "\n<tr {$class}>";
+      
+      // render all cells inside
+      $colCount = count($data);
+      for ($col=0; $col<$colCount; $col++)
+      {
+        $output .= $this->_renderCell($data[$col], $row, $col, $columntype);
+      }
+     
+      // fill up remaining space
+      $filling = $this->m_maxWidth - $colCount;
+      if ($filling > 0)
+      {
+        $output .= $this->_renderFillingCell($filling, $columntype);
+      }
+       
+      $output .= "\n</tr>";
+      
+      return $output;
+    }
+    
+    /**
+     * Renders a filling cell used to display a correct two-dimensional table.
+     *
+     * @param int $colspan columns to span
+     * @param string $type tagtype to use
+     * @return string html filling cell
+     */
+    function _renderFillingCell($colspan, $type)
+    {
+      return "<{$type} colspan=\"{$colspan}\">&nbsp;</{$type}>";
+    }
 
+    /**
+     * Renders the body of the table. The body contains all rows except the
+     * header and footer rows. Surrounds the body with tbody tags.
+     *
+     * @param array $data all body rows
+     * @param int $rowOffset how many header rows are drawn before the body
+     * @return string html table body
+     */
+    function _renderBody($data, $rowOffset = 0)
+    {
+      $output = '<tbody>';
+      
+      $rowCount = count($data);
+      for ($row=$rowOffset; $row<$rowCount; $row++)
+      {
+        $rowData = $data[$row];
+        $output .= $this->_renderRow($rowData, $row);
+      }
+      
+      $output .= '</tbody>';
       return $output;
     }
 
+    
     /**
-     * @access private
+     * Gets the cell id string if available.
+     *
+     * @param array $data cell data
+     * @return string html id string like 'id="1"';
      */
-    function _getMaxCols($data)
+    function _getIdStr($data)
     {
-      $max = 0;
-      for($i=0, $_i=count($data); $i<$_i; $i++)
+      $id = '';
+      if(is_array($data) && isset($data['id']))
       {
-        $max = max(count($data[$i]), $max);
+        $id = "id=\"{$data['id']}\"";
       }
-      return $max;
-    }
 
-    function registerStyle($style,$module="")
-    {
-      $theme = &atkinstance("atk.ui.atktheme");
-      $page = &atkPage::getInstance();
-      $page->register_style($theme->stylePath($style.".css",$module));
+      return $id;
     }
-
+    
     /**
-     * @access private
-     */
-    function _start($style)
-    {
-      return "<table".($style!=""?' class="'.$style.'"':'').">";
-    }
-
-    /**
-     * @access private
-     */
-    function _end($style)
-    {
-      return "</table>";
-    }
-
-    /**
-     * @access private
+     * Gets the alignmentstring for an alignment flag
+     *
+     * @param int $alignment alignmentflag TBL_[LEFT, RIGHT, CENTER, BOTTOM or MIDDLE]
+     * @return string html alignment for a cell or row
      */
     function _alignmentStr($alignment)
     {
@@ -380,7 +581,31 @@
 
       return $ret;
     }
+    
+    /**
+     * Gets the span string for a cell
+     *
+     * @param array $span array containing spanning info
+     * @return string html spanning string
+     */
+    function _spanStr($span)
+    {
+      if ($span["rowspan"]=="" && $span["colspan"]=="")  return '';
 
+      if($span["rowspan"]!="" && $span["colspan"]!="")
+      {
+        return 'rowspan="'.$span["rowspan"].'" colspan="'.$span["colspan"].'"';
+      }
+      elseif($span["rowspan"]!="")
+      {
+        return 'rowspan="'.$span["rowspan"].'"';
+      }
+      elseif($span["colspan"]!="")
+      {
+        return 'colspan="'.$span["colspan"].'"';
+      }
+    }
+    
     /**
      * Constructs the html class attribute string using a classname
      *
@@ -396,6 +621,13 @@
         return 'class="'.$class.'"';
     }
 
+    /**
+     * Gets the alignment for a specific cell
+     *
+     * @param int $row row nuber
+     * @param int $col column number
+     * @return string aligment
+     */
     function getAlignment($row, $col)
     {
       if (array_key_exists($row, $this->m_cellalignment) && array_key_exists($col, $this->m_cellalignment[$row]) && $this->m_cellalignment[$row][$col]!="") return $this->m_cellalignment[$row][$col];
@@ -420,26 +652,12 @@
     }
 
     /**
-     * @access private
+     * Gets the spanning for a specific cell
+     *
+     * @param int $row row number of the cell
+     * @param int $col column number of the cell
+     * @return bool|string spanning or false if nothing found for the cell
      */
-    function _spanStr($span)
-    {
-      if ($span["rowspan"]=="" && $span["colspan"]=="")  return '';
-
-      if($span["rowspan"]!="" && $span["colspan"]!="")
-      {
-        return 'rowspan="'.$span["rowspan"].'" colspan="'.$span["colspan"].'"';
-      }
-      elseif($span["rowspan"]!="")
-      {
-        return 'rowspan="'.$span["rowspan"].'"';
-      }
-      elseif($span["colspan"]!="")
-      {
-        return 'colspan="'.$span["colspan"].'"';
-      }
-    }
-
     function getSpan($row,$col)
     {
       if(array_key_exists($row,$this->m_span) &&
