@@ -6,6 +6,12 @@ Bug numbers are references to bugs in http://www.achievo.org/bugzilla
 
 Changed in ATK 6.1
 ------------------
+
++ Added a new class atkTableRendererGrouped. Renders a table with collapsable/
+  expandable groups. First used in the weektimereg module to organise projects.
+  [Edgar]
+* Refactored the atktablerenderer (backwards compatible). Functionally
+  decomposed the render method. Done to make groupedRenderer possible. [Edgar]
 + Added select method to atkNode which returns an instance of the
   atkSelector class which can be used to fluently build a selectDb
   expression to retrieve a single row, all rows or the row count.
